QOL Fixes
Fixes a number of bugs with plugins detecting server software while also implementing virtual threads and spark profiler. This patch drops what was a limited paper support in favor of simplicity for the bukkit api.

Fixed commands not correctly being registered.
Fixed console logs and potinial thread locks.